<resources>
    <string name="app_name">GitHub User</string>
    <string name="search">Search</string>
    <string name="search_hint">Search User</string>

    <string name="username">username</string>
    <string name="name">Name</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="followers">0 followers</string>
    <string name="following">0 following</string>

    <string name="text1">Click</string>
    <string name="text2">to Search GitHub User</string>
    <string name="todo">TODO</string>
</resources>