<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/color_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            tools:visibility="visible"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:elevation="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_user"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name_user"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_username"
            android:gravity="center">

            <ImageView
                android:id="@+id/ic_people"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_people_outline_24"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/followers"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/following"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_4"
        app:tabIndicatorColor="@color/color_1"
        app:tabRippleColor="@color/color_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>